--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <title>Document</title>
     <style>
         body {
-            color: 'red';
+            color: 'blue';
         }
     </style>
 </head>
 <body>
+   
     <script>
     document.write("Hello");
     document.write(" world!");
