--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,14 +9,18 @@
     <style>
         body {
             color: 'blue';
+            background-color: 'yellow';
         }
     </style>
-</head>
+</head>i
+
 <body>
-   
+    <h1>Naslov</h1>
+    <p>Paragraf</p>
     <script>
-    document.write("Hello");
-    document.write(" world!");
+        document.write("Hello");
+        document.write(" world!");
     </script>
 </body>
+
 </html>
